[package]
name = "klyhostservice"
version = "0.1.0"
authors = ["walker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clip = "0.1"
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4"
# paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust", branch = "master" }
paho-mqtt = "0.9"
tokio = { version = "1.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures = { version = "0.3", features = ["thread-pool"]}
async-std = "1.8"
bytes = "1.0"
protobuf = { version = "2", features = ["with-bytes"] }
virt = "0.2"
libvirt-sys = "1.2"
libc = "0.1"

[build-dependencies]
protobuf-codegen-pure = "2"
protoc-rust = "2"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
lto = false

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true