[package]
name = "klyhostservice"
version = "0.1.0"
authors = ["walker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clip = "0.*"
log = "0.*"
log4rs = "1.*"
serde = { version = "1.*", features = ["derive"] }
serde_yaml = "0.*"
lazy_static = "1.*"
# paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust", branch = "master" }
paho-mqtt = "0.*"
tokio = { version = "1.*", features = ["full", "tracing"] }
tracing = "0.*"
tracing-subscriber = { version = "0.*", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-util = { version = "0.*", features = ["full"] }
tokio-stream = "0.*"
async-stream = "0.*"
futures = { version = "0.*", features = ["thread-pool"]}
# async-std = "1.*"
bytes = "1.*"
protobuf = { version = "2.*", features = ["with-bytes"] }
virt = "0.*"
libvirt-sys = "1.*"
libc = "0.1"
curl = "0.*"

[build-dependencies]
protobuf-codegen-pure = "2"
protoc-rust = "2"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
lto = false

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true